--- a/spec/fixtures/vcr_cassettes/New_party_page/When_i_visit_the_new_party_page_has_title_and_form.yml
+++ b/spec/fixtures/vcr_cassettes/New_party_page/When_i_visit_the_new_party_page_has_title_and_form.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 25 Mar 2022 17:25:09 GMT
+      - Sat, 02 Apr 2022 20:56:42 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,23 +42,21 @@ http_interactions:
       X-Memc-Key:
       - 92f0f4310f9aec63bc8c99b5e9b827912d7866f4
       X-Memc-Age:
-      - '1371'
+      - '9692'
       X-Memc-Expires:
-      - '14179'
+      - '7284'
       Etag:
-      - W/"33fe5facdee225a842e9afd903656d35"
+      - W/"994330c47f36ce8cb454b369113b52d0"
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 afd102780059267a882ab641a00a66d6.cloudfront.net (CloudFront)
+      - 1.1 1e55614427beb2c9a53afc5f91022b80.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DFW56-P5
       X-Amz-Cf-Id:
-      - 9QAQSOi1S9c_mFPo5JsdqS1izst38BZmgooBdnlg_rB11i4FMqhmFw==
-      Age:
-      - '3197'
+      - "-SfIjt87Nli6ydyNvq1ZY1PvJVwnkRzZhY-oygfLDFFZ88JCM_hAaw=="
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/3rlclw8qHWEX2hYHNi7dAaW1e0.jpg","belongs_to_collection":{"id":295,"name":"Pirates
@@ -66,11 +64,11 @@ http_interactions:
         of the Caribbean: The Curse of the Black Pearl","overview":"Jack Sparrow,
         a freewheeling 18th-century pirate, quarrels with a rival pirate bent on pillaging
         Port Royal. When the governor''s daughter is kidnapped, Sparrow decides to
-        help the girl''s love save her.","popularity":144.408,"poster_path":"/z8onk7LV9Mmw6zKz4hT6pzzvmvl.jpg","production_companies":[{"id":2,"logo_path":"/wdrCwmRnLFJhEoH8GSfymY85KHT.png","name":"Walt
+        help the girl''s love save her.","popularity":115.116,"poster_path":"/z8onk7LV9Mmw6zKz4hT6pzzvmvl.jpg","production_companies":[{"id":2,"logo_path":"/wdrCwmRnLFJhEoH8GSfymY85KHT.png","name":"Walt
         Disney Pictures","origin_country":"US"},{"id":130,"logo_path":"/c9dVHPOL3cqCr2593Ahk0nEKTEM.png","name":"Jerry
         Bruckheimer Films","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"2003-07-09","revenue":655011224,"runtime":143,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Prepare
         to be blown out of the water.","title":"Pirates of the Caribbean: The Curse
-        of the Black Pearl","video":false,"vote_average":7.8,"vote_count":17149}'
-  recorded_at: Fri, 25 Mar 2022 18:18:26 GMT
+        of the Black Pearl","video":false,"vote_average":7.8,"vote_count":17183}'
+  recorded_at: Sat, 02 Apr 2022 20:56:43 GMT
 recorded_with: VCR 6.1.0
